--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     --body-bg: #FDF9F2; /* #42821A for WCAG 2.0 Level AA Contrast for new #FDF9F2 background colour. Updated from: #FDF9F2 to: #F5F0E4 for warmth (reverted) */
     --text-color: #2A5C2A;  /* alt. #42861A  for WCAG 2.0 Level AA Contrast for white background colour */
     --text-color-light: rgba(42, 92, 42, 0.8);
-    --header-bg: #F5F0E4; /* previously #f8f9fa . Changed from "transparent" to #F5F0E4 for warmth to maintain new header to body separation in colour */
+    --header-bg: transparent; /* previously #f8f9fa . Changed from "transparent" to #F5F0E4 for warmth to maintain new header to body separation in colour (reverted) */
     --footer-bg: #F5F0E4; /* previously #f8f9fa . Changed from "transparent" to #F5F0E4 for warmth to maintain new footer to body separation in colour */
     --header-text: #2A5C2A;
     --footer-text: #2A5C2A;
